# simplesrs

./: .gitignore  README.md  pyproject.toml
simplesrs/: __init__.py  db.py  default.py
